# zero2sixty

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
scripts/: init_dbz.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs
src/routes/: greet.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs
