[package]
name = "zero2sixty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2sixty"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["tracing"]}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "request-id"] }
# tower = "0.4.13"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.17.0"
# reqwest = { version = "0.12.2", features = ["json"] }
reqwest = { version = "0.12.2",default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.115"

[dev-dependencies]
once_cell = "1.19"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6.0"
linkify = "0.10.0"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
